# leaf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  build.rs  deny.toml  dist-workspace.toml  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: build-setup.yml
.github/workflows/: ci.yml  deny.yml  release.yml  validate-plugin.yml
docs/: leaf-simulation-scenario.md
docs/superpowers/specs/: 2026-06-12-global-profile-design.md
plugins/angry/.claude-plugin/: plugin.json
plugins/angry/.codex-plugin/: plugin.json
plugins/angry/skills/angry-council/: SKILL.md
plugins/angry/skills/angry-dijkstra/: SKILL.md
plugins/angry/skills/angry-ego/: SKILL.md
plugins/angry/skills/angry-feynman/: SKILL.md
plugins/angry/skills/angry-fletcher/: SKILL.md
plugins/angry/skills/angry-jobs/: SKILL.md
plugins/angry/skills/angry-orwell/: SKILL.md
plugins/angry/skills/angry-pauli/: SKILL.md
plugins/angry/skills/angry-rams/: SKILL.md
plugins/angry/skills/angry-ramsay/: SKILL.md
plugins/angry/skills/angry-sherlock/: SKILL.md
plugins/angry/skills/angry-theo/: SKILL.md
plugins/angry/skills/angry-torvalds/: SKILL.md
plugins/angry/skills/council/: SKILL.md
plugins/angry/skills/dijkstra/: SKILL.md
plugins/angry/skills/ego/: SKILL.md
plugins/angry/skills/feynman/: SKILL.md
plugins/angry/skills/fletcher/: SKILL.md
plugins/angry/skills/jobs/: SKILL.md
plugins/angry/skills/loop-angry-council/: SKILL.md
plugins/angry/skills/loop-angry-torvalds/: SKILL.md
plugins/angry/skills/loop-council/: SKILL.md
plugins/angry/skills/loop-torvalds/: SKILL.md
plugins/angry/skills/orwell/: SKILL.md
plugins/angry/skills/pauli/: SKILL.md
plugins/angry/skills/rams/: SKILL.md
plugins/angry/skills/ramsay/: SKILL.md
plugins/angry/skills/sherlock/: SKILL.md
plugins/angry/skills/theo/: SKILL.md
plugins/angry/skills/torvalds/: SKILL.md
plugins/angry/skills/using-angry/: SKILL.md
plugins/leaf/: NOTICE.md
plugins/leaf-codex/.codex-plugin/: plugin.json
plugins/leaf-codex/skills/install/: SKILL.md
plugins/leaf-codex/skills/leaf-autopilot/: SKILL.md
plugins/leaf-codex/skills/learn/: SKILL.md
plugins/leaf-codex/skills/press/: SKILL.md
plugins/leaf-codex/skills/profile/: SKILL.md
plugins/leaf-codex/skills/soul/: SKILL.md
plugins/leaf-codex/skills/split/: SKILL.md
plugins/leaf-codex/skills/using-leaf/: SKILL.md
plugins/leaf-codex/skills/work/: SKILL.md
plugins/leaf/.claude-plugin/: plugin.json
plugins/leaf/.codex-plugin/: plugin.json
plugins/leaf/commands/: install.md
plugins/leaf/hooks/: hooks-codex.json  hooks.json  leaf-cli-check  run-hook.cmd  session-context.sh  session-start  session-start-codex
plugins/leaf/skills/autopilot/: SKILL.md
plugins/leaf/skills/clean/: SKILL.md
plugins/leaf/skills/done/: SKILL.md
plugins/leaf/skills/help/: SKILL.md
plugins/leaf/skills/install/: SKILL.md
plugins/leaf/skills/leaf-clean/: SKILL.md
plugins/leaf/skills/leaf-done/: SKILL.md
plugins/leaf/skills/leaf-learn/: SKILL.md
plugins/leaf/skills/leaf-profile/: SKILL.md
plugins/leaf/skills/leaf-reversed/: SKILL.md
plugins/leaf/skills/learn/: SKILL.md
plugins/leaf/skills/polish/: SKILL.md
plugins/leaf/skills/press/: SKILL.md
plugins/leaf/skills/sidecar/: SKILL.md
plugins/leaf/skills/soul/: SKILL.md
plugins/leaf/skills/split/: SKILL.md
scripts/: lint-shell.sh  validate-manifests.mjs
skills/leaf-clean/: SKILL.md
skills/leaf-clean/agents/: openai.yaml
skills/leaf-done/agents/: openai.yaml
skills/leaf-fall/: SKILL.md
skills/leaf-fall/agents/: openai.yaml
skills/leaf-idea/: SKILL.md
skills/leaf-idea/agents/: openai.yaml
skills/leaf-idea/references/: gate-01-intent.md  gate-02-unknowns-context.md  learn-gates.md
skills/leaf-learn/: SKILL.md
skills/leaf-learn/agents/: openai.yaml
skills/leaf-learn/references/: gate-01-intent.md  gate-02-unknowns-context.md
skills/leaf-press/: SKILL.md
skills/leaf-press/agents/: openai.yaml
skills/leaf-profile/: SKILL.md
skills/leaf-profile/agents/: openai.yaml
skills/leaf-reversed/: SKILL.md
skills/leaf-soul/: SKILL.md
skills/leaf-soul/agents/: openai.yaml
skills/leaf-soul/references/: loop-engineering.md  reporting.md  taste.md
skills/leaf-work/: SKILL.md
skills/leaf-work/agents/: openai.yaml
skills/leaf-work/references/: brownfield-html-capture.md  clarity-ledger.md  decision-rationale.md  design-critic.md  engine.md  gate-authoring.md  gates.md  layout.md  patterns.md  task-pr-size-guidance.md
src/: checkpoint.rs  cli.rs  codex_config.rs  date.rs  doctor.rs  doctor_output.rs  fs_ext.rs  git.rs  graph.rs  inventory.rs  lib.rs  lifecycle.rs  list_columns.rs  list_output.rs  main.rs  phase.rs  preview.rs  profile.rs  review.rs  scaffold.rs  serve.rs  sidecar.rs  slug.rs  storage.rs  syntax.rs  tree.rs  update.rs
src/doctor/: lifecycle.rs  pressed.rs  srp_sidecar.rs
src/tui/: app.rs  browser.rs  mod.rs  render.rs  session.rs
tests/: cli.rs
tests/fixtures/: dist-manifest-v0.9.1.json
web/: .prettierignore  TYPESCRIPT_MIGRATION.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
web/src/: App.jsx  App.test.tsx  App.tsx  GraphCanvas.jsx  GraphCanvas.tsx  GraphDetailsPanel.jsx  GraphDetailsPanel.test.jsx  GraphDetailsPanel.test.tsx  GraphDetailsPanel.tsx  GraphView.jsx  GraphView.test.tsx  GraphView.tsx  LiveIndicator.test.tsx  LiveIndicator.tsx  ReviewReader.jsx  ReviewReader.test.tsx  ReviewReader.tsx  ReviewReaderParts.jsx  ReviewReaderParts.tsx  Toast.tsx  TreeView.test.tsx  TreeView.tsx  WorkspaceList.jsx  WorkspaceList.test.tsx  WorkspaceList.tsx  WorkspacePreview.test.tsx  WorkspacePreview.tsx  api.js  api.ts  clipboard.test.ts  clipboard.ts  graphGeometry.js  graphGeometry.test.js  graphGeometry.test.ts  graphGeometry.ts  graphLayout.js  graphLayout.test.js  graphLayout.test.ts  graphLayout.ts  graphModel.js  (+52 more)
web/src/test/: mockFetch.ts  setup.ts
(+70 files in other folders)
