[package]
name = "leaf"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
publish = false
description = "Domain-neutral human-agent collaboration CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hoetaek/leaf"
homepage = "https://github.com/hoetaek/leaf"
readme = "README.md"
keywords = ["cli", "agent", "collaboration", "workflow"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "SECURITY.md",
    "src/**",
    "tests/**",
]

[dependencies]
anyhow = "1"
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
pulldown-cmark = "0.13"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
toml = "0.9.8"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
unicode-width = "0.2"
url = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"

[package.metadata.dist]
dist = true
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]

[profile.dist]
inherits = "release"
lto = "thin"
