[package]
name = "leaf"
version = "0.13.0"
edition = "2024"
rust-version = "1.88"
publish = false
description = "Domain-neutral human-agent collaboration CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hoetaek/leaf"
homepage = "https://github.com/hoetaek/leaf"
readme = "README.md"
keywords = ["cli", "agent", "collaboration", "workflow"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "SECURITY.md",
    "src/**",
    "tests/**",
]

[dependencies]
anyhow = "1"
arboard = { version = "3.6.1", default-features = false }
axum = "0.8.9"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
lzma-rs = "0.3"
pulldown-cmark = "0.13"
ratatui = "0.30.1"
rust-embed = { version = "8.11.0", optional = true }
self-replace = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syntect = "5"
tar = "0.4"
tempfile = "3"
# Constraint-only dependency: time 0.3.48 breaks ratatui-widgets' blanket
# `From` impls with E0119 under fresh resolution (e.g. `cargo install`
# without --locked). Remove once a fixed time release ships or 0.3.48 is
# yanked.
time = { version = ">=0.3.47, <0.3.50", default-features = false }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["fs"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
unicode-width = "0.2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# `leaf update` HTTPS client. rustls (via `ring`) everywhere except Windows,
# where `ring` fails to cross-compile for `aarch64-pc-windows-msvc` under
# cargo-dist's cargo-xwin toolchain — there we use native-tls (SChannel), which
# needs no C crypto build. Linux therefore still avoids OpenSSL.
[target.'cfg(not(windows))'.dependencies]
ureq = { version = "3", default-features = false, features = ["rustls"] }

[target.'cfg(windows)'.dependencies]
ureq = { version = "3", default-features = false, features = ["native-tls"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"

[package.metadata.dist]
dist = true
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[profile.dist]
inherits = "release"
lto = "thin"

# `embed-web` bundles the built `web/dist` SPA into the binary so `leaf serve`
# runs standalone. Off by default for contributor builds, which serve the leaf
# checkout's `web/dist` from disk; release builds enable this through
# dist-workspace.toml after the Vite build.
[features]
embed-web = ["dep:rust-embed"]
